# erp_ai_assistant

./: .gitignore  CLEANUP_NOTES.md  MANIFEST.in  README.md  error.txt  pyproject.toml  setup.py
docs/: CLAUDE_DESKTOP_UPGRADE.md  PRODUCTION_REFACTOR_NOTES.md  fac_tool_blueprint.md
erp_ai_assistant/: get_error.py  hooks.py  modules.txt  patches.txt  test_assistant_bubble.html
erp_ai_assistant/api/: __init__.py  agent_runtime.py  ai.py  ai_config.py  assistant.py  audit.py  auth.py  catalog.py  chat.py  context_resolver.py  copilot_response.py  data_validator.py  entity_extractor.py  erp_tools.py  export.py  fac_client.py  fac_proxy.py  file_tools.py  host_runtime.py  import_export.py  infrastructure.py  intent_detector.py  llm_client.py  llm_gateway.py  model_client.py  orchestrator.py  parser.py  planner.py  proactive_insights.py  prompt_builder.py  provider_settings.py  rate_limit.py  reporting.py  resource_registry.py  router.py  safety.py  security.py  tool_aliases.py  tool_registry.py  tool_router.py  (+1 more)
erp_ai_assistant/api/connectors/: fac.py
erp_ai_assistant/api/context/: resources.py
erp_ai_assistant/api/scripts/: extract_ai.py  inject_back_imports.py  inject_cross_imports.py  remove_ai.py  repair_architecture.py
erp_ai_assistant/api/tools/: erp.py  export.py  files.py  import_export.py  (+1 more)
erp_ai_assistant/assistant_tools/: __init__.py  common.py  file_ops.py  integration_tools.py  ui_tools.py  web_tools.py
erp_ai_assistant/config/: __init__.py  desktop.py
erp_ai_assistant/page/: __init__.py
erp_ai_assistant/www/: assistant.html  assistant.py
(+27 files in other folders)
