[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erp-ai-assistant"
version = "0.1.0"
description = "Frappe custom app scaffold for FAC-backed AI assistant features"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
